fixed spacing on the list of words

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,5 +5,5 @@
 }
 
 li {
-  padding: 30px;
+  height: 70px; !important
 }
